fix hm4